<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context=".MainActivity"
    tools:viewBindingIgnore="true">

    <TextView
        android:id="@+id/calcText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="130dp"
        android:layout_marginRight="20dp"
        android:paddingBottom="30dp"
        android:text="@string/mathText"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="70sp"
        android:maxLength="8"/>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/calcText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/clearBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/funcBtn"
            android:padding="5dp"
            android:text="@string/AC"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="40sp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/negateBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/funcBtn"
            android:padding="5dp"
            android:text="@string/negate"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="40sp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/modularBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/funcBtn"
            android:padding="5dp"
            android:text="@string/_mod"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="40sp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/divideBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/math_Btn"
            android:padding="5dp"
            android:text="@string/div"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="40sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/btnSeven"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/numBtn"
            android:padding="5dp"
            android:text="@string/_7"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <Button
            android:id="@+id/btnEight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/numBtn"
            android:padding="5dp"
            android:text="@string/_8"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="40sp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnNine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/numBtn"
            android:padding="5dp"
            android:text="@string/_9"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="40sp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/multiplyBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/math_Btn"
            android:padding="5dp"
            android:text="@string/x"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="40sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/btnFour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/numBtn"
            android:padding="5dp"
            android:text="@string/_4"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="40sp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnFive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/numBtn"
            android:padding="5dp"
            android:text="@string/_5"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="40sp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnSix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/numBtn"
            android:padding="5dp"
            android:text="@string/_6"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="40sp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/subtractionBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/math_Btn"
            android:padding="5dp"
            android:text="@string/subtract"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="40sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/btnOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/numBtn"
            android:padding="5dp"
            android:text="@string/_1"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="40sp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/numBtn"
            android:padding="5dp"
            android:text="@string/_2"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="40sp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/numBtn"
            android:padding="5dp"
            android:text="@string/_3"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="40sp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/additionBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/math_Btn"
            android:padding="5dp"
            android:text="@string/addition"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="40sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/btnZero"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/numBtn"
            android:padding="5dp"
            android:text="@string/zero"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="40sp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnPeriod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/numBtn"
            android:padding="5dp"
            android:text="@string/period"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="40sp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/equalsBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/math_Btn"
            android:padding="5dp"
            android:text="@string/equal"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="40sp" />

    </LinearLayout>


</RelativeLayout>